--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "mkdir -p build; npm run build:database; npm run build:docker",
-    "build:docker": "docker build --tag erpmicroservices/e_commerce-database --rm .",
-    "build:database": "liquibase-3.5.3-bin/liquibase --changeLogFile=./database_change_log.yml --url='offline:postgresql' updateSql > build/database_up.sql",
-    "clean": "rm -rf build; rm -rf generated-sql;yes | docker rmi  --force erpmicroservices/e_commerce-database; yes | docker volume prune; docker rm e_commerce-database",
+    "build": "npm run build:database; npm run build:docker",
+    "build:docker": "docker build --tag erpmicroservices.org/authorization_server-database:$npm_package_version --tag erpmicroservices.org/authorization_server-database:latest --rm .",
+    "build:database": "mkdir -p build;liquibase --changeLogFile=./database_change_log.yml --url='offline:postgresql' updateSql > build/database_up.sql",
+    "clean": "rm -rf build; rm -rf generated-sql;yes | docker rmi  --force erpmicroservices/authorization_server-database; yes | docker volume prune; docker rm authorization_server-database",
     "update_database": "liquibase-3.5.3-bin/liquibase --changeLogFile=./database_change_log.yml --url='jdbc:postgresql://localhost/people_and_organizations' --username=people_and_organizations --password=people_and_organizations update",
-    "push": "docker push erpmicroservices/e_commerce-database:latest",
-    "start": "docker run --publish 5432:5432 --name e_commerce-database erpmicroservices/e_commerce-database",
-    "test": "cucumber-js --tags @e_commerce_database  --require-module @babel/register --require-module @babel/polyfill  -r ./features ../e_commerce-features"
+    "push": "docker push erpmicroservices/authorization_server-database:latest",
+    "start": "docker run --publish 5432:5432 --name authorization_server-database erpmicroservices/authorization_server-database",
+    "test": "cucumber-js --tags @authorization_server_database  --require-module @babel/register --require-module @babel/polyfill  -r ./features ../authorization_server-features"
   },
   "repository": {
     "type": "git",
