--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "authorization_server-db",
-  "version": "1.0.0",
+  "version": "1.1.0-SNAPSHOT",
   "description": "",
   "main": "index.js",
   "scripts": {
